...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/black"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Проверить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutgame" />

    <Button
...
