...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="День" />

        <RadioButton
            android:id="@+id/radioButton_night"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ночь" />
    </RadioGroup>

    <ImageButton
...
